revised first chapter to smooth

--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,35 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-08-02 14:52:15 -0500 
+%% Created for Evan Bollig at 2013-08-02 16:23:49 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{Fornberg2012,
+	Author = {Fornberg, Bengt and Lehto, Erik and Powell, Collin},
+	Date-Added = {2013-08-02 21:23:24 +0000},
+	Date-Modified = {2013-08-02 21:23:29 +0000},
+	Institution = {Uppsala University, Numerical Analysis},
+	Number = {2012-018},
+	Series = {Technical report / Department of Information Technology, Uppsala University},
+	Title = {Stable calculation of Gaussian-based RBF-FD stencils},
+	Year = {2012}}
+
+@article{Fornberg2011b,
+	Author = {Bengt Fornberg and Erik Lehto},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Date-Added = {2013-08-02 19:53:32 +0000},
+	Date-Modified = {2013-08-02 19:53:38 +0000},
+	Ee = {http://dx.doi.org/10.1016/j.jcp.2010.12.014},
+	Journal = {J. Comput. Physics},
+	Number = {6},
+	Pages = {2270-2285},
+	Title = {Stabilization of RBF-generated finite difference methods for convective PDEs},
+	Volume = {230},
+	Year = {2011}}
 
 @article{Cuomo2013,
 	Author = {Salvatore Cuomo and Ardelio Gallettiy and Giulio Giuntay and Alfredo Staracey},
