Relocated a lot of stuff to an introduction. continuing with the goal to finish a chapter tonight

--- a/latex/future_of_gpus.tex
+++ b/latex/future_of_gpus.tex
@@ -46,6 +46,8 @@ During a 2009 summer internship at NCAR, we investigated the use of Portland Gro
 CUDA 5 introduced support for MPI directly from the GPU. But we are proponents for OpenCL, not CUDA. The difference lying in the 
 
 
+\section{OpenMP}
+The latest version of OpenMP (v4.0) introduces pragmas for offloading computation to accelerators. These pragmas will function similarly to pragmas from PGI, OpenACC, and the Intel MIC. 
 
 \ifstandalone
 \bibliographystyle{plain}
