--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -44,10 +44,88 @@
 
 
 
+
+\chapter{Introduction}
+\label{chap:introduction}
+\authnote{insert more discussion here: what are RBFs, what type of problems do they solve, why are they of value}
+
+% TODO: how does the RBF-FD method expand on existing?
+While most of the literature surrounding RBFs for PDEs involves collocation, the hot topic in the community today is RBF-generated Finite Differences (RBF-FD). RBF-FD is a hybrid of RBF scattered data interpolation and classical Finite Difference (FD). 
+
+The idea behind classical FD is to express derivatives at a single node (center) as a weighted combination/difference of solution values from a small neighborhood around the center. Common approximations such as upwind differencing, center differencing, and other higher order approximations are of this form. 
+%A common approach to building such discrete operators is to form a local interpolant in a neighborhood of the target point, and simply differentiate it analytically. 
+In similar fashion, RBF-FD combines solutions values, but it does so in a more generalized sense than standard FD stencils. Classical FD is typically restricted to regular meshes and often symmetric stencils in practice with the same set of weights for each stencil. Weights are derived from polynomial expansion and can be obtained in 1D by solving a Vandermonde interpolation matrix \cite{FornbergLehto11}. Weights for higher dimension stencils are composed of combinations of 1D formulas for each dimension. This implies added restrictions on scattered nodes---in fact, the Vandermonde system loses its guaranteed nonsingularity in the case of scattered 2D nodes \cite{FornbergLehto11}. In contrast to this, RBF-FD is designed for stencils with irregular node placement and can easily provide a unique set of weights for each stencil. RBF-FD leverages $d$-dimensional basis functions to derive weights directly for any dimension with guaranteed nonsingularity \cite{FornbergLehto11}.
+%A detailed derivation is provided in the next chapter. 
+%TODO:  \cite{Wright2004, Wright2003, WrightFornberg06, Chandhini2007}. 
+
+%Such an approach leads to very simple implementations of time-advancement schemes, whether explicit or implicit. The solution at the new time step is simply some linear---if $\diffop{}$ is linear, nonlinear otherwise---combination of the unknown functional values (if implicit scheme) or known functional value (if explicit scheme). 
+
+
+
+
+
+%This is followed by a description of Radial Basis Function-generated Finite Differences and examples of operators approximated by the method within this work.
+RBF-generated Finite Differences (RBF-FD) were first introduced by Tolstykh in 2000 \cite{Tolstykh2000}, 
+but it was the simultaneous, yet independent,
+efforts in \cite{Shu2003}, \cite{Tolstykh2003a}, \cite{Wright2003} and \cite{Cecil2004} that gave the method its real start. Introduced over a decade ago, the method is only recently showing signs that it has obtained the critical-mass following necessary for the method's use in large-scale scientific models. At the onset of this work, most of the literature considered RBF-FD for problem sizes up to a few thousand or tens of thousands of nodes. Similar to most RBF methods, RBF-FD has been predominantly implemented within small scale serial computing environments where authors have investigated the method and developed extensions within MATLAB. 
+
+Our goal is to scale RBF-FD solutions on high resolution meshes across high performance clusters, and to lead the way for its adoption within HPC and supercomputing circles. This is the focus of Chapter~\ref{chap:distributed_rbffd}, where we demonstrate the scalability of RBF-FD across one thousand processors. As part of the push to HPC, leveraging Graphics Processing Units (GPUs) for computation is considered critical. GPUs, introduced in Chapter~\ref{chap:gpu_rbf} and extended to distributed environments in Chapter~\ref{chap:multigpu_rbffd}, are many-core accelerators capable of general purpose, embarrassingly parallel computations. GPUs represent the latest trend in HPC, where compute nodes are commonly supplemented by one or more accessory GPUs. This effort leads the way for application of RBF-FD in an age when compute nodes with attached accelerator boards are considered key to breaching the exa-scale computing barrier \cite{GPUandExascale2011}. Key challenges lie in the choice of grid, the choice of stencil, and stability of scalable solutions. To demonstrate Chapter~\ref{chap:applied_rbffd} verifies 
+
+
+
+
+
+\section{On Parallel/Distributed RBF-FD} 
+
+%\authnote{Related work for start of Parallel/GPU chapter}
+Parallel implementations of RBF methods rely on domain decomposition. Depending on the implementation, domain decomposition not only accelerates solution procedures, but can decrease the ill-conditioning that plague all global RBF methods \cite{Divo2007}. The ill-conditioning is reduced if each domain is treated as a separate RBF domain, and the boundary update is treated separately. Domain decomposition methods for RBFs were introduced by Beatson et al. \cite{Beatson2000} in the year 2000 as a way to increase problem sizes into the millions of nodes.
+
+This work leverages a domain decomposition, but not for the purpose of conditioning. Instead the focus is on decomposing the domain in order to scale RBF-FD across more than a thousand CPU cores of an HPC cluster. Add to this the twist of incorporating a novel implementation on the GPU with overlapping communication and computation. This combination is unmatched in related work. However, RBF methods do have a bit of history of parallel implementations. 
+
+In 2007, Divo and Kassab \cite{Divo2007} used a domain decomposition method with artificial 
+subdomain boundaries for their implementation of a local collocation method \cite{Divo2007}. 
+The subdomains are processed independently, with derivative values 
+at artificial boundary points averaged to maintain global consistency of physical values. Their implementation 
+was designed for a 36 node cluster, but benchmarks and scalability tests are not provided.
+
+% Divo: it seems almost unnecessary to use domain decomposition if they have the local method.
+% I suppose the domain decomposition is necessary for averaging physical values more than RBF collocation.
+
+
+Kosec and \v{S}arler \cite{Kosec2008} have the only known (to our knowledge) OpenMP implementation for RBFs. The authors parallelize coupled heat transfer 
+and fluid flow problems on a single workstation. 
+The application involves the local RBF collocation method, explicit time-stepping and Neumann boundary conditions. A speedup 
+factor of 1.85x over serial execution was achieved by executing on two CPU cores; no further 
+results from scaling tests were provided. 
+
+Stevens et al. \cite{Stevens2009a} mention a parallel implementation under development, but no document is available at this time. 
+
+Perhaps the most competitive parallel implementation of RBFs is the PetRBF \cite{Yokota2010} branch of PETSc \cite{PETSc}. The authors of PetRBF (also developers for PETSc) have implemented a highly scalable, efficient RBF interpolation method based on compact RBFs (i.e., they operate on sparse matrices). The authors demonstrate efficient weak scaling of PetRBF across 1024 processes on a Blue Gene/L, and strong scaling up to 128 processes on the same hardware. Additionally, strong scaling was tested on a Cray XT4. On the Blue Gene/L, PetRBF is demonstrated to achieve an impressive 74\% parallel weak scaling efficiency on 1024 processes (operating on over 50 million points), and 84\% strong scaling efficiency for 128 processes. For the Cray XT4, strong scaling tops out at 36\% for 128 processes, a respectable number---and similar to observed results for our own code on 128 processes.  
+
+%TODO Additional RBF implementations are discussed at the end of this chapter in the context of parallel co-processing with the GPU. 
+
+\section{On GPU RBF Methods}
+Related work on RBFs and GPUs is sparse. In 2009, Schmidt et al. \cite{Schmidt2009a, Schmidt2009b} implemented a global RBF method for Tsunami simulation on the GPU using the AccelerEyes Jacket \cite{JacketGuide2009} add-on for MATLAB. Jacket provides a MATLAB interface to data structures and routines that internally call to the NVidia CUDA API. Their model was based on a single large dense matrix solve, and with the help of Jacket the authors were able to achieve approximately 7x speedup over the standard MATLAB solution on the then current generation of the MacBook Pro laptop. The authors compared the laptop CPU (processor details not specified) to the built-in NVidia GeForce 8600M GT GPU. Schmidt et al.'s implementation was the first contribution to the RBF community to leverage accelerators. The results were significant and promising, but no further contributions were made on the topic. 
+
+While both Schmidt et al.'s method and our's are based on RBFs, the two problems are only distantly related when it comes to implementation on the GPU. Dense matrix operations have a high computational complexity, are considered ideal (or near to) by linear algebra libraries like BLAS \cite{BLAS} and LAPACK \cite{Lapack1999}, and were demonstrated to fit well on GPUs from the onset of General Purpose GPU (GPGPU) Computing. In fact, NVidia included CUBLAS \cite{CUBLAS} (a GPU based BLAS library for their hardware) with their initial public release of the game-changing CUDA development kit in 2006. In stark contrast to this, sparse matrix operations have minimal computational complexity and are less than ideal for the GPU.
+
+
+Earlier this year (2013), Cuomo et al. \cite{Cuomo2013} implemented RBF-interpolation on the GPU for surface reconstruction. Their implementation utilizes PetRBF \cite{Yokota2010}, and new built-in extensions that allow GPU access within PETSc. PETSc internally wraps the CUSP project \cite{CUSP} for sparse matrix algebra on the GPU. With the help of these libraries, Cuomo et al. solve and apply sparse interpolation systems on the GPU for up to three million nodes on an NVidia Fermi C1060 GPU (4GB). They compare results to a single core CPU implementation on an Intel i7-940 CPU and demonstrate that the GPU accelerate their solutions between 6x and 25x. Unfortunately, the authors do not show evidence of scaling the interpolation across multiple GPUs; so while evidence exists that PetRBF now has full GPU support, it remains to be seen how well the code can scale in GPU mode. 
+ 
+\section{On Multi-GPU Methods}
+ 
+Multi-GPU Jacobi iteration for Navier stokes flow in cavity \url{http://scholarworks.boisestate.edu/cgi/viewcontent.cgi?article=1003&context=mecheng_facpubs}
+
+Thibault et al. have multiple works on Multi-GPU and overlapping comm and comp. 
+
+
+
+
 \part{Preliminaries}
 
 
 \chapter{RBF Methods for PDEs}
+\label{chap:background}
 
 The process of solving partial differential equations (PDEs) using radial basis functions (RBFs) dates back to 1990 \cite{Kansa1990a,Kansa1990b}. However, at the core of all RBF methods lies the fundamental problem of approximation/interpolation. Some methods (e.g., global- and compact-RBF methods) apply RBFs to approximate derivatives directly. Others (e.g., RBF-generated Finite Differences) leverage the basis functions to generate weights for finite-differencing stencils, utilizing the weights in turn to approximate derivatives. Regardless, to track the history of RBF methods, one must look back to 1971 and R.L. Hardy's seminal research on interpolation with multi-quadric basis functions \cite{Hardy1971}. 
 
@@ -103,8 +181,8 @@ Fortunately, recent algorithms such as Contour-Pad\'{e} \cite{Fornberg2004} and 
 
 RBF methods for interpolation first appeared in 1971 with Hardy's seminal research on multiquadrics
 \cite{Hardy1971}. In his 1982 survey of scattered data interpolation methods \cite{Franke1982}, Franke rated multiquadrics first-in-class against 28 other methods (3 of which were RBFs) \cite{Franke1982}. Many other RBFs, 
-including those presented in Table~\ref{tbl:rbfs} have been applied in literature, but for PDEs in particular, none have rivaled the 
-attention received by multiquadrics. 
+including those presented in Table~\ref{tbl:rbfs} have been applied in literature, but for PDEs in particular, few can rival the 
+attention received by multiquadrics. Recently, however, Gaussian RBFs are on the rise due to recent advances in eigenvalue stabilization and new methods for investigating the $\epsilon \rightarrow 0$ regime (see e.g., \cite{FornbergLehto11,Fornberg2011a}). 
 
 
 By 1990, the understanding of the scientific community regarding RBFs was sufficiently developed for collocating PDEs \cite{Kansa1990a,Kansa1990b}. PDE collocation seeks a solution of the form
@@ -581,10 +659,7 @@ With these two algorithms, global RBF methods have overcome most ill-conditionin
 % due to ill-conditioning. 
 As the number of RBFs increases beyond a few thousand nodes it is impossible to avoid ill-conditioning of the extremely large interpolation matrix. This reveals the benefit of local methods, which decrease the number of RBFs. To our knowledge, no applications of local methods require more than a few hundred nodes per local solution. 
 
-Most recently, Fornberg et al. \cite{Fornberg2012} introduced another stable method called RBF-GA, which performs a similar change of basis as RBF-QR, but expands Gaussian RBFs in terms of incomplete Gamma functions. Unlike RBF-QR, this method is limited to Gaussian basis functions only. Interestingly, the benchmarks provided in \cite{Fornberg2012} demonstrate the cost (i.e., time to solve for weights) for existing stable methods can be ordered (from lowest to highest) as: RBF-Direct, RBF-GA, and then RBF-QR. RBF-GA is also limited to less than 2000 nodes. The RBF-GA method was also developed around the RBF-FD method, distinguishing it from the others 
- 
-
-
+Most recently, Fornberg et al. \cite{Fornberg2012} introduced another stable method called RBF-GA, which performs a similar change of basis as RBF-QR, but expands Gaussian RBFs in terms of incomplete Gamma functions. Unlike RBF-QR, this method is limited to Gaussian basis functions only. Interestingly, the benchmarks provided in \cite{Fornberg2012} demonstrate the cost (i.e., time to solve for weights) for existing stable methods can be ordered (from lowest to highest) as: RBF-Direct, RBF-GA, and then RBF-QR. Similar to the other methods, RBF-GA is also limited to mid-size problems, with the authors finding it effective on less than 2000 nodes. Unlike previous stable methods which were developed for global RBF methods, RBF-GA was demonstrated to improve the accuracy and stability of weight calculation for the RBF-FD method.
 
 
 
@@ -602,29 +677,15 @@ Most recently, Fornberg et al. \cite{Fornberg2012} introduced another stable met
 %\part{The RBF-FD Method}
 %The RBF-FD chapter needs:%•	Related papers on RBF-FD specifically (i.e., the complete history; follow Flyer Fornberg book). %o	Clearly state what every paper in the RBF-FD group accomplished%•	Weight method%•	Similarly to spectral and pseudospectral (only collocation points allow optimizations) modes, RBF-FD and FD are related and share much of the same approach. Use RBF-FD for general node placement and high order accuracy. Use FD for optimized solution, faster solvers (Fourier decomposition, Band solver, etc). %•	Apply weights to single node (figure from Paper 1) or form a DM%•	Solve PDEs with explicit/implicit form (solvers)%o	Mention GMRES%•	List of weight types%o	Projection operators%•	Choosing epsilon%•	Hyperviscosity stabilization
 
+
+\part{RBF-FD for HPC Environments}
+
 \chapter{Introduction to RBF-FD}
 \label{chap:rbffd_method}
 
-% TODO: how does the RBF-FD method expand on existing?
-While most of the literature surrounding RBFs for PDEs involves collocation, an alternative method does exist: RBF-generated Finite Differences (RBF-FD). RBF-FD is a hybrid of RBF scattered data interpolation and Finite Difference (FD) stencils. 
 
-The idea behind FD stencils is to express various derivative operators as a linear combination of known functional values in the neighborhood of a point where an approximation to the derivative operator is desired. Common approximations such as upwind differencing, center differencing, and higher order approximations are of this form. 
-%A common approach to building such discrete operators is to form a local interpolant in a neighborhood of the target point, and simply differentiate it analytically. 
-Similarly, RBF-FD combines functional values, but it does so in a more generalized sense than standard FD stencils. While one is typically restricted to regular meshes and often symmetric stencils in classic FD, RBF-FD allows for stencils with irregular placement and number of nodes. 
-%A detailed derivation is provided in the next chapter. 
-%TODO:  \cite{Wright2004, Wright2003, WrightFornberg06, Chandhini2007}. 
-
-%Such an approach leads to very simple implementations of time-advancement schemes, whether explicit or implicit. The solution at the new time step is simply some linear---if $\diffop{}$ is linear, nonlinear otherwise---combination of the unknown functional values (if implicit scheme) or known functional value (if explicit scheme). 
-
-
-
-
-
-%This is followed by a description of Radial Basis Function-generated Finite Differences and examples of operators approximated by the method within this work.
-
-The choice to study RBF-FD within this work is motivated by two factors. First, RBF-FD represents one of the latest developments within the RBF community. The method was first introduced in 2000 \cite{Tolstykh2000}, but is only now showing signs it has obtained the critical-mass following necessary for the method's use in large-scale scientific models. Our goal throughout the dissertation has been to scale RBF-FD to complex problems on high resolution meshes, and to lead the way for its adoption in high performance computational geophysics. Graphics Processing Units (GPUs), introduced in Chapter~\ref{chap:parallel_rbf}, are many-core accelerators capable of general purpose, embarrassingly parallel computations. GPUs represent the latest trend in high performance computing, where compute nodes are commonly supplemented by one or more accessory GPUs. %We capitalize on the inherent parallelism of RBF-FD to develop a collection of multi-GPU test cases that span the compute nodes of a Top 500 supercomputer. 
-Our effort leads the way for application of RBF-FD in an age when compute nodes with attached accelerator boards will be key to breaching the exa-scale computing barrier \cite{GPUandExascale2011}. Second, RBF-FD inherits many of the positive features from global and local collocation schemes, but sacrifices others for reduced computational complexity and potentially increased parallelism. The method is sufficiently young, so many opportunities for investigation still remain. Key challenges lie in the choice of grid, the choice of stencil, whether or not to change the support as a function of the stencil, how to guaranty the stability of the differentiation  operator after discretization, etc. 
-
+%We capitalize on the inherent parallelism of RBF-FD to develop a collection of multi-GPU test cases that span the compute nodes of a Top 500 supercomputer. 
+%Second, RBF-FD inherits many of the positive features from global and local collocation schemes, but sacrifices others for reduced computational complexity and potentially increased parallelism. The method is sufficiently young, so many opportunities for investigation still remain. 
 
 
 %Prior to considering implementation of RBF-FD and optimizations on one or more GPUs, it is prudent to dedicate significant attention to the method definition and related works.
@@ -1151,7 +1212,8 @@ Figure~\ref{fig:scvt_nodes} provides an example SCVT grid with N=100,000 nodes. 
 %\item a
 %\end{itemize}
 
-\subsection{Generating Stencils}
+\chapter{Generating Stencils for RBF-FD}
+\label{chap:stencils}
 
 TODO:
 \begin{itemize}
